unpackaged/main/default/objects/Student__c/fields/Batch_Year__c.field-meta.xml
<CustomField>
    <fullName>Batch_Year__c</fullName>
    <formula>Text(YEAR(Enrollment__r.Enrollment_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Year</label>
    <type>Text</type>
</CustomField>