unpackaged/main/default/objects/Student__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <formula>Enrollment__r.Enrollment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>