unpackaged/main/default/objects/Student__c/listViews/Students.listView-meta.xml
<ListView>
    <fullName>Students</fullName>
    <columns>NAME</columns>
    <columns>Enrollment__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Semester__c</columns>
    <filterScope>Mine</filterScope>
    <label>Students</label>
</ListView>